--- a/news/2014/10/09/001.mdx
+++ b/news/2014/10/09/001.mdx
@@ -1,209 +1,130 @@
 ---
-slug: "9th-tuna-skills-olympics"
-title: "9th tuna skills olympics"
-description: "The tuna skills olympics sponsored by the goldenstate college inc. is one of the highlights..."
+slug: "goldenstate-college-hosts-9th-tuna-skills-olympics-highlighting-mindanaos-hospitality-talents"
+title: "Goldenstate College Hosts 9th Tuna Skills Olympics, Highlighting Mindanao’s Hospitality Talents"
+description: "Goldenstate College of General Santos City held the 9th Tuna Skills Olympics on September 10–11..."
 author: "Goldenstate"
 date: "2014/10/09"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/tuna-2014-01.jpg"
 ---
 
-The tuna skills olympics sponsored by the goldenstate college inc. is one of the highlights of the annual tuna festival celebrated in general santos city, the tuna capital of the philippines. this series of competitions provides schools from all over mindanao a competitive space to showcase their talents in various areas related to the hospitality industry.
+Goldenstate College of General Santos City held the 9th Tuna Skills Olympics on September 10–11, 2014, at the KCC Convention Centre. The event gathered high schools and colleges from Mindanao to compete in various hospitality-related contests as part of the city’s annual Tuna Festival.
+
+The competition promotes skills in areas such as tuna bread making, table setting, cake decorating, flower arranging, and flare bartending. The Tuna Skills Olympics aims to develop and promote excellence in hospitality skills, giving participants an opportunity to demonstrate their abilities while gaining industry insights in a competitive yet friendly environment.
+
+This year’s theme, “Pyestang Karagatan, Pyestang Lawihan ng Magandang Gensan” (Feast of the Seas, Feast of the Fish for the Beautiful City of General Santos), celebrated the city's rich marine culture and its thriving hospitality sector.
+
+---
 
-The ultimate mission of the tuna skills olympics is to afford all schools a fun, yet challenging atmosphere where they can demonstrate and expand their knowledge of hospitality. the competition was guided by highly qualified panel of judges that helped competitors exceed their creative and technical limits in the various fields of competition. every participating high school and college exemplified dedication and sportsmanship in what turned out to be a fun and exciting event for all.
+### Winners Announced for Tuna Skills Olympics 2014
 
-Under the theme “pyestang karagatan pyestang lawihan ng magandang gensan” (feast of the seas, feast of the fish for the beautiful city of general santos), the tuna skills olympics coordinates events related to the hospitality industry, including tuna bread making, tuna pasta, table setting, bread and cake decorating, flower arranging and bar and flare tending.
+**High School Level**
 
-History.
+* **Tuna Bread Competition**
+  - 1st – New Era University GenSan
+  - 2nd – Malandag National High School Team A
+  - 3rd – General Santos City National Secondary of Arts and Trade
 
-In september 2006, through the leadership of goldenstate college inc. chief executive officer george warren a. manilay, mnsa and the chairmanship of college president miss josie y. tirador the tuna skills olympics came to life. held at the kcc convention centre, the inaugural event featured students from golden state college and various high schools from throughout general santos city.
+* **Table Napkin Folding**
+  - 1st – B.E.S.T College of Polomolok
+  - 2nd – Lagao Integrated Arts and Trade (SPED) School
+  - 3rd – General Santos City National Secondary of Arts and Trade
 
-In 2007, at the suggestion of mr. bebot haw, the tuna skills olympics became part of the annual tuna festival celebration; general santos city would consequently shoulder the expenses for the event. it was also during this year that goldenstate started inviting other colleges. the first colleges to participate were from digos and marbel.
+* **Cake Decorating**
+  - 1st – New Era University GenSan Team A
+  - 2nd – Hope Christian School
+  - 3rd – New Era University GenSan Team B
 
-It was on 2008 that tuna skills olympics became officially sanctioned by the tuna council making it a formally and permanently celebrated event for the city.
+* **Table Skirting**
+  - 1st – Malandag National High School Team A
+  - 2nd – Malandag National High School Team B
+  - 3rd – Hope Christian School
 
-The tuna skills olympics is in its ninth year and hosts a vast number of participating schools from througout south cotabato and as far as the davao region.
+* **Market Basket Competition**
+  - 1st – Christian School of Polomolok
+  - 2nd – Hope Christian School
+  - 3rd – Notre Dame IBED
 
-Participation.
+* **Tuna Sashimi Decorating**
+  - 1st – Alabel Central Integrated Center
+  - 2nd – New Era University Team A
+  - 3rd – Alabel Central Integrated Center
 
-The tuna skills olympics is an annual event organized and hosted by goldenstate college general santos city that brings together various high schools and colleges to compete in events testing skills and expertise in fields and disciplines related to the hospitality industry.
+* **Flower Arranging Competition**
+  - 1st – Hope Christian School
+  - 2nd – General Santos City National Secondary of Arts and Trade
+  - 3rd – Silway 8 National High School
 
-High school participants for this event are from different schools from around the south cotabato area. they were alabel central integrated school, malandag national high school, christian school of polomolok, new era university of general santos, genereal santos city national secondary of arts and trade, lagao national high school, holy trinity college high school department, notre dame integrated basic education and hope christian school.
+**College Level**
 
-The collegiate participants were the university of mindanao, university of immaculate concepcion, davao merchant marine academy, davao doctors college, brokenshire college of davao, b.e.s.t college of polomolok, st. marys college of bansalan, villamor college of arts and business, assumption college of davao, sti college of davao, philippine millennium college, kidapawan doctors college, assumption technical vocational institute, notre dame of tacurong college, southpoint college of gensan and holy cross college davao.
+* **Tuna Bread Competition**
+  - 1st – University of Mindanao Team B
+  - 2nd – University of Mindanao Team A
+  - 3rd – Saint Mary’s College of Bansalan
 
-The winners for each category are as follows:.
+* **Table Napkin Folding Competition**
+  - 1st – Holy Cross of Davao
+  - 2nd – SouthPoint College of Gensan
+  - 3rd – University of Mindanao Team B
 
-High school level.
+* **Table Setting Competition**
+  - 1st – Villamor College of GenSan
+  - 2nd – Saint Mary’s College of Bansalan
+  - 3rd – Assumption College of Davao
 
-Tuna bread competition.
+* **Tuna Sashimi Competition**
+  - 1st – Assumption College of Davao Team A
+  - 2nd – Davao Doctor’s College
+  - 3rd – University of Mindanao Team B
 
-1st – new era university gensan.
+* **Market Basket Competition**
+  - 1st – Notre Dame of Tacurong College
+  - 2nd – Assumption College of Davao Team A
+  - 3rd – Assumption Technical Vocational Institute
 
-2nd – malandag national high school team a.
+* **Extreme Flare Tending Competition**
+  - 1st – Holy Cross of Davao
+  - 2nd – Philippine Millennium College Team A
+  - 3rd – Villamor College of GenSan
 
-3rd – general santos city national secondary of arts and trade.
+* **Cake Décor Competition**
+  - 1st – Davao Doctor’s College Team A
+  - 2nd – Davao Merchant Marine Academy Team A
+  - 3rd – University of Immaculate Concepcion
 
-Table napkin folding.
+* **Flower Arrangement Competition**
+  - 1st – B.E.S.T College of Polomolok Team A
+  - 2nd – Villamor College of Business Team A
+  - 3rd – University of Mindanao Team B
 
-1st – b.e.s.t college of polomolok.
+* **Table Skirting Competition**
+  - 1st – Villamor College of Business Team A
+  - 2nd – University of Mindanao Team A
+  - 3rd – Davao Merchant Marine Academy Team A
 
-2nd – lagao integrated arts and trade (sped) school.
+* **Bread Display Competition**
+  - 1st – Assumption Technical Vocational Institute
+  - 2nd – University of Immaculate Concepcion
+  - 3rd – Davao Merchant Marine Academy Team A
 
-3rd – general santos city national secondary of arts and trade.
+**Grand Champions:**
 
-Cake decorating.
+* High School Level – Malandag National High School
+* College Level – University of Mindanao
 
-1st – new era university of gensan team a.
+---
 
-2nd – hope christian school.
+Malandag National High School was named grand champion for the high school division, while University of Mindanao earned the title for the college division.
 
-3rd – new era university of gensan team b.
+The Tuna Skills Olympics began in 2006 under the leadership of Dr. Warren A. Manilay, MNSA, CEO of Goldenstate College, and College President Ms. Josie Y. Tirador. By 2007, it became an official part of the Tuna Festival and was formally recognized in 2008 by the Tuna Council as a regular city event. Since then, the competition has grown to include participants from as far as Davao and North Cotabato, attracting aspiring hospitality professionals to showcase their skills in a friendly, competitive setting.
 
-Table skirting.
+Sponsors of the event included KCC Malls (venue partner), Dole Philippines, Globe Telecom, Petron Gasul, Grab-a-Crab Restaurant, Universal Robina Corporation, Avon Cosmetics, the Philippine Fisheries Development Authority, and the Philippine Foremost Milling Corporation. Each provided product support and prizes for the winners, helping sustain the event’s continued success.
 
-1st – malandag national high school team a.
+“The Tuna Skills Olympics helps young talents sharpen their skills while celebrating the city’s most valuable resource — tuna,” said one of the event coordinators. “This is more than a contest; it’s training ground for future professionals in the hospitality industry.”
 
-2nd – malandag national high school team b.
+The event closed with award presentations and a show of appreciation to sponsors, participants, and organizers, looking forward to its 10th year of celebration in 2015.
 
-3rd – hope christian school.
+![University of Mindanao Team B wins first place in the college-level Tuna Bread competition.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/tuna-2014-02.jpg)
 
-Market basket competition.
+![New Era University Team A takes the top spot in the high school Cake Decorating competition.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/tuna-2014-03.jpg)
 
-1st – christian school of polomolok.
-
-2nd – hope christian school.
-
-3rd – notre dame ibed.
-
-Tuna sashimi decorating.
-
-1st – alabel central integrated center.
-
-2nd – new era university team a.
-
-3rd – alabel central integrated center.
-
-Flower arranging competition.
-
-1st – hope christian school.
-
-2nd – general santos city national secondary of arts and trade.
-
-3rd – silway 8 national high school.
-
-College level.
-
-Tuna bread competition.
-
-1st – university of mindanao team b.
-
-2nd – university of mindanao team a.
-
-3rd – saint mary’s college of bansalan.
-
-Table napkin folding competition.
-
-1st – holy cross of davao.
-
-2nd – southpoint college of gensan.
-
-3rd – university of mindanao team b.
-
-Table setting competition.
-
-1st – villamor college of gensan.
-
-2nd – saint mary’s college of bansalan.
-
-3rd – assumption college of davao.
-
-Tuna sashimi competition.
-
-1st – assumption college of davao team a.
-
-2nd – davao doctor’s college.
-
-3rd – university of mindanao team b.
-
-Market basket competition.
-
-1st – notre dame of tacurong college.
-
-2nd – assumption college of davao team a.
-
-3rd – assumption technical vocational institute.
-
-Extreme flare tending competition.
-
-1st – holy cross of davao.
-
-2nd – philippine millennium college team a.
-
-3rd – villamor college of gensan.
-
-Cake decor competition.
-
-1st – davao doctor’s college team a.
-
-2nd – davao merchant marine academy team a.
-
-3rd – university of immaculate concepcion.
-
-Flower arrangement competition.
-
-1st – best college of polomolok team a.
-
-2nd – villamor college of business team a.
-
-3rd – university of mindanao team b.
-
-Table skirting competition.
-
-1st – villamor college of business team a.
-
-2nd _ university of mindanao team a.
-
-3rd – davao merchant marine academy team a.
-
-Bread display competition.
-
-1st – assumption technical vocational institute.
-
-2nd – university of immaculate concepcion.
-
-3rd – davao merchant marine academy team a.
-
-Grand champions.
-
-High school level – malandag national high school.
-
-College level – university of mindanao.
-
-Sponsorship.
-
-The tuna skills olympics would like to thank the following sponsors: dole philippines, philippine foremost milling corporation, kcc malls, grab a crab restaurant, petron gasul, universal robina corporation, philippine fisheries development authorities, avon cosmetics and globe telecom.
-
-All of the major sponsors contributed products and prizes for the event. kcc malls provided the venue.
-
-The competition.
-
-General santos was declared the tuna capital of the philippines in september 1999. each year, the tuna festival honors what is the city’s primary economic resource.
-
-In 2006, goldenstate college, a local leader in the provision of expert manpower to the hospitality industry, established the first tuna skills olympics. the annual event hosts numerous high schools and colleges participating in competitions meant to demonstrate their skills in several fields related to the service industry.
-
-Carrying the theme “piyestang karagatan piyestang lawihan sa magandang gensan” ( feast of the seas in the beautiful city of general santos), the 9th annual tuna skills olympics was hosted in the kcc convention centre, kcc mall of gensan from september 10 to 11, 2014.
-
-Summaries of selected events.
-
-Table setup.
-
-Every participant exerted their best effort to win, creating marvelous table setup commensurate with fine dining while evoking the feel of an underwater experience. the 3rd place went to assumption college of davao, 2nd place was st. mary’s college of bansalan and grand winner was villamor college of arts and business.
-
-The tuna bread contest.
-
-The tuna bread event was held on the campus of goldenstate college general santos in a separate event on september 9, 2014, a day before the official start of the tuna skills olympics. for the high school category, the general santos city national secondary of arts and trades got the 3rd place, malandag national high school won the 2nd place, and new era university claimed 1st place. for the college category, st. mary’s college of bansalan won 3rd place honors, while 2nd and 1st place were respectively awarded to university of mindanao teams a and b.
-
-The first-place winner of the college tuna bread competition.
-
-The first-place winner of the high school cake-decorating competition.
-
-Students prepare for the high school market basket competition.
+![High school participants prepare ingredients during the Market Basket competition.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/tuna-2014-04.jpg)
