--- a/news/2014/12/07/001.mdx
+++ b/news/2014/12/07/001.mdx
@@ -1,27 +1,30 @@
 ---
-slug: "goldenstate-shines-bright-at-christmastime-with-the-light-a-tree-countdown"
-title: "goldenstate shines bright at christmastime with the light-a-tree countdown"
-description: "The holiday season is in full swing, and before everyone goes back home to spend..."
+slug: "goldenstate-kicks-off-holiday-season-with-inaugural-light-a-tree-countdown"
+title: "Goldenstate Kicks Off Holiday Season with Inaugural Light-a-Tree Countdown"
+description: "The holiday season officially began at Goldenstate College with a bright and joyful bang on..."
 author: "Goldenstate"
 date: "2014/12/07"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/christmass-2014-04.jpg"
 ---
 
-The holiday season is in full swing, and before everyone goes back home to spend christmas with family, goldenstate kicked off the month’s festivities on december 1 with the inaugural light-a-tree countdown celebration.
+The holiday season officially began at Goldenstate College with a bright and joyful bang on December 1, thanks to the very first Light-a-Tree Countdown Celebration!
 
-Spearheaded by mr. john manilay, head of the development office, the light-a-tree countdown is the culmination of the efforts of students, faculty, and staff. each department spent the preceding weeks decorating a tree in the courtyard. except for the christmas lights, all of the decorations needed to be sourced from recycled materials. this added challenge tested the creativity and ingenuity of each team, and on monday evening, once the sun had set, their stunning innovations were on bright, luminous display.
+Organized by Mr. John Manilay, Head of the Development Office, the event brought the whole campus together for a fun, creative, and eco-friendly competition. In the weeks leading up to the big night, departments worked hard decorating Christmas trees using recycled materials—yep, plastic cups, old CDs, and scrap items became snowmen, nativity scenes, and even Santa Claus. The only exception? Twinkling lights.
 
-But first, attendees partook in a christmas bazaar featuring food and gifts sold by each department. around 5 o’clock, the program officially began with opening remarks by sir john. this was followed by a surprise birthday greeting for our ceo, dr. warren manilay, mnsa. after being serenaded by faculty and staff, dr. manilay offered some comments of appreciation for and reflection on his birthday, as well as acknowledgement of the hard work put in by the event’s participants.
+Before the lights came on, the courtyard buzzed with excitement as students, staff, and guests explored a mini Christmas bazaar. Food, treats, and handmade goodies were up for sale—all prepared by different departments.
 
-After a few more words from the night’s organizers, the entire courtyard went dark, starting the countdown. then came the moment everyone, especially the participants, had been waiting for: in a flash, all eight lighting designs shone, dazzling the audience. goldenstate had become a yuletide wonderland. each tree demonstrated the artistry and resourcefulness of the designers, as items like plastic cups and cds were repurposed into well-executed takes on christmas icons like nativity scenes, snowmen, and santa claus. to supplement the designs, each team performed christmas carols, ranging from traditional a cappella medleys to multipart singing-and-dancing extravaganzas.
+The official program kicked off with Sir John’s opening remarks, followed by a surprise birthday serenade for CEO Dr. Warren Manilay, MNSA. After sharing a heartfelt message, Dr. Manilay thanked everyone for their efforts and joined in the celebration.
 
-As the audience was mesmerized by a number from the always-entertaining sinag dance troupe, the total scores for the tree designs and musical performances were submitted by the judging panel, composed of sir ferdinand alcantara, ma’am lj pulido, and sir joaquin suaverdez. once all of the points were tabulated, it was division 2 who had come out on top.
+Then came the main event. The lights dimmed. The countdown began. And—boom!—the whole courtyard lit up with glowing trees, turning the campus into a Christmas wonderland. But it didn’t stop there. Each team also delivered a caroling performance—some simple and sweet, others full-on musical productions with dance moves!
 
-Congratulations, not only to the members of division 2 on their well-deserved victory, but to everyone who had made this event possible. it will certainly be difficult to top this event next christmas.
+The Sinag Dance Troupe wowed the crowd as the judges—Sir Ferdinand Alcantara, Ma’am LJ Pulido, and Sir Joaquin Suaverdez—tallied the scores. In the end, Division 2 took the top spot, but the night was a win for everyone who joined in.
 
-The sinag dance troupe wows the crowd with another high-flying number.
+The Light-a-Tree Countdown was a perfect way to ring in December—filled with fun, teamwork, and holiday spirit. We can’t wait to see what next year brings!
 
-Closeup detail of the winning design by division 2. congratulations!.
+![The Sinag Dance Troupe lights up the night with a dazzling holiday-themed performance.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/christmass-2014-01.jpg)
 
-Division 4 performs a traditional a capella medley.
+![A merry masterpiece! Division 2’s recycled Christmas tree shines with creativity and cheer.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/christmass-2014-02.jpg)
 
-Happy birthday, sir warren! our beloved ceo was given a surprise celebration during monday’s festivities.
+![Voices of joy! Division 4 fills the air with a heartwarming a cappella Christmas medley.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/christmass-2014-03.jpg)
+
+![A festive surprise! Goldenstate celebrates CEO Dr. Warren A. Manilay’s birthday with holiday spirit.](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/christmass-2014-05.jpg)
