--- a/news/2025/06/10/002.mdx
+++ b/news/2025/06/10/002.mdx
@@ -4,6 +4,7 @@ title: "College Days 2025: Celebrating Passion, Showcasing Skills, Shaping Futur
 description: "Goldenstate College marked its much-anticipated College Days 2025 with the theme, “Celebrating Passion, Showcasing Skills..."
 author: "Goldenstate"
 date: "2025/06/10"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2025/06/492546740_1097743799064110_4873183510744699618_n.jpg"
 ---
 
 Goldenstate College marked its much-anticipated College Days 2025 with the theme, “Celebrating Passion, Showcasing Skills, Shaping Futures,” highlighting the significance of student life, achievements, and academic growth within the institution.
