--- a/news/2025/06/10/002.mdx
+++ b/news/2025/06/10/002.mdx
@@ -1,7 +1,7 @@
 ---
 slug: "college-days-2025-celebrating-passion-showcasing-skills-shaping-futures"
 title: "College Days 2025: Celebrating Passion, Showcasing Skills, Shaping Futures"
-description: "Goldenstate College marked its much-anticipated College Days 2025 with the theme, “Celebrating Passion, Showcasing Skills..."
+description: "Goldenstate College marked its much-anticipated College Days 2025 with the theme, celebrating passion, showcasing skills..."
 author: "Goldenstate"
 date: "2025/06/10"
 thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2025/06/492546740_1097743799064110_4873183510744699618_n.jpg"
