--- a/news/2025/01/28/014.mdx
+++ b/news/2025/01/28/014.mdx
@@ -1,13 +1,25 @@
 ---
-slug: "hism-celebrates-41st-anniversary-with-joyful-festivities"
-title: "hism celebrates 41st anniversary with joyful festivities"
-description: "Holy infant school of malungon (hism), an affiliate institution of goldenstate college, marked its 41st..."
+slug: "holy-infant-school-of-malungon-marks-41st-founding-anniversary"
+title: "Holy Infant School of Malungon Marks 41st Founding Anniversary"
+description: "Holy Infant School of Malungon marked its 41st anniversary with activities on faith, culture, and unity..."
 author: "Goldenstate"
 date: "2025/01/28"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/473426807_1023985696439921_1173561654314531337_n.jpg"
 ---
 
-Holy infant school of malungon (hism), an affiliate institution of goldenstate college, marked its 41st anniversary on january 15, 2025 with a vibrant celebration filled with faith, culture, and family spirit. the festivities, which took place at the school grounds in malungon, sarangani, kicked off with a heartfelt holy mass to honor the school’s longstanding commitment to education and community.
+Holy Infant School of Malungon (HISM), an affiliate of Goldenstate College, marked its 41st founding anniversary on January 15, 2025, with a day of activities highlighting faith, culture, and family unity.
 
-The mass was attended by faculty, staff, students, parents, alumni, and local residents, setting the tone for the day of festivities. it was a celebration of faith, unity, and service as they celebrate the school’s legacy of excellence in education. following the mass, the celebration continued with the lively and colorful sinulog dance, a cultural showcase of vibrant performances, filled with energy and grace, were a fitting tribute to the school’s deep-rooted connection to local culture and community. the anniversary celebration also featured the much-awaited family day, a delightful gathering that brought together families, students, and faculty for a day of fun activities and bonding. games, entertainment, and shared meals helped foster a sense of togetherness among the school community, strengthening the bond between students, their families, and the faculty.
+The celebration began with a Holy Mass at the school grounds, attended by students, parents, alumni, faculty, and local residents. The mass honored the institution’s commitment to faith-based education and community service.
 
-The event was organized and led by the dedicated hism faculty and staff, who worked tirelessly to ensure the success of the day’s activities. the celebration was a fitting tribute to the school’s enduring legacy and the promise of a bright future ahead.
+A Sinulog dance presentation followed, showcasing colorful and vibrant cultural performances that reflected the school’s connection to local traditions.
+
+The event also featured Family Day, where games, entertainment, and shared meals brought families and the school community together for a day of bonding and celebration.
+
+The entire celebration was spearheaded by the dedicated HISM faculty and staff, whose efforts ensured the success of the activities. The anniversary served as a heartfelt tribute to the institution’s legacy of excellence, and a reaffirmation of its mission to nurture future generations through faith-based education.
+
+As HISM looks ahead, the event not only celebrated the past 41 years of achievements but also reflected the school’s continued growth and the promise of a bright future ahead.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/473426807_1023985696439921_1173561654314531337_n-1.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/473426807_1023985696439921_1173561654314531337_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/473562621_1023985676439923_1540246771867739657_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/473567769_1023985639773260_7846488407539392805_n-1.jpg)
